# population_grids_paper

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  _quarto.yml  data.dvc  differences.ipynb  index.qmd  pyproject.toml
.dvc/: config
docs/: europe_census_data.md  global_census_availability.md  time_series_feasibility.md
notebooks/: 01_generate_assets.ipynb
popgrids/: __init__.py  adapters.py  cities.py  cli.py  country_codes.py  crs.py  io.py  pipeline.py  provenance.py  quality.py  registry.py  schema.py  standardize.py
popgrids/americas/: __init__.py  catalog.py
popgrids/asiapac/: __init__.py  catalog.py
popgrids/europe/: __init__.py  adapters.py  baseline.py  catalog.py  cities.py  cli.py  pipeline.py  schema.py  standardize.py
scripts/: download_census.py  download_europe.py
