[project]
name = "population-grids-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.7.24",
    "geemap>=0.37.2",
    "geopandas>=1.1.3",
    "ipykernel<7",
    "psycopg2>=2.9.12",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]
