[project]
name = "population-grids-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.7.24",
    "geemap>=0.37.2",
    "geopandas>=1.1.3",
    "ipykernel<7",
    "openpyxl>=3.1.5",
    "psycopg2>=2.9.12",
    "py7zr>=1.1.3",
    "pyarrow>=17",
    "requests>=2.32",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.66",
]

[project.scripts]
download-census = "popgrids.cli:main"
download-europe = "popgrids.cli:main"  # back-compat alias

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["popgrids"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]

[tool.ruff.lint]
select = ["ALL"]
# D: docstrings optional. COM812/ISC001: defer to the formatter.
# TRY003: long messages live at the call site for these small, one-off errors.
ignore = ["D", "COM812", "ISC001", "TRY003"]

[tool.ruff.lint.per-file-ignores]
# Shim scripts are intentionally not an importable package.
"scripts/*" = ["INP001"]
# A005: io.py deliberately mirrors the stdlib name. S404/S603: system-unzip
# fallback for archives stdlib zipfile cannot decode (fixed argv, resolved path).
"popgrids/io.py" = ["A005", "S404", "S603"]
# Best-effort git provenance via a fixed-argv subprocess call.
"popgrids/provenance.py" = ["S404", "S603"]
# The CLI prints user-facing tables/summaries to stdout.
"popgrids/cli.py" = ["T201"]
# Catalogs are data: long source URLs and notes exceed the line length.
"**/catalog.py" = ["E501"]
